# Poplin

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Poplin/: CMakeLists.txt
Poplin/include/poplin/: reflectedtypes.h
Poplin/include/poplin/animation/ecs/components/: animatorcomponent.h
Poplin/include/poplin/animation/ecs/systems/: animationsystem.h
Poplin/include/poplin/core/: error.h  signal.hpp  singleton.hpp  timer.hpp  types.hpp
Poplin/include/poplin/core/profiling/: profilerlogger.h  profilingtimer.h
Poplin/include/poplin/core/reflection/: enuminfo.h  propertyinfo.h  reflectedtyperegistry.h  typeinfo.h
Poplin/include/poplin/core/serialization/: serializer.h
Poplin/include/poplin/engine/: gameengine.h  gameengineconfig.hpp  gameenginestats.hpp
Poplin/include/poplin/engine/asset/: assetlocator.h  managedasset.h
Poplin/include/poplin/engine/ecs/: componentdescriptor.h  componentdescriptorregistry.h  entity.h  entityregistry.h  system.h  systemupdater.h  universe.h  world.h
Poplin/include/poplin/engine/ecs/components/: entitymetadatacomponent.h  logiccomponent.h  transformcomponent.h
Poplin/include/poplin/engine/ecs/systems/: logiccomponentupdatersystem.h
Poplin/include/poplin/engine/input/: input.h  keycodes.hpp  mousecodes.hpp
Poplin/include/poplin/engine/window/: applicationwindow.h  applicationwindowevents.hpp
Poplin/include/poplin/graphics/: renderer.h  shader.h  texture.h  vertexarray.h  vertexbuffer.h
Poplin/include/poplin/graphics/assets/: textureasset.h
Poplin/include/poplin/graphics/ecs/components/: cameracomponent.h  spritecomponent.h
Poplin/include/poplin/graphics/ecs/systems/: rendersystem.h
Poplin/include/poplin/graphics/loaders/: modelloader.h  shaderloader.h
Poplin/include/poplin/physics/: physicscontactlistener.h  physicsworld.h
Poplin/include/poplin/physics/ecs/components/: rigidbodycomponent.h
Poplin/include/poplin/physics/ecs/systems/: physicssystem.h
Poplin/src/: poplin.cpp  reflectedtypes.cpp
Poplin/src/animation/ecs/components/: animatorcomponent.cpp
Poplin/src/animation/ecs/systems/: animationsystem.cpp
Poplin/src/core/: error.cpp
Poplin/src/core/profiling/: profilerlogger.cpp  profilingtimer.cpp
Poplin/src/core/reflection/: enuminfo.cpp  propertyinfo.cpp  reflectedtyperegistry.cpp  typeinfo.cpp
Poplin/src/core/serialization/: serializer.cpp
Poplin/src/engine/: gameengine.cpp
Poplin/src/engine/asset/: assetlocator.cpp  managedasset.cpp
Poplin/src/engine/ecs/: componentdescriptor.cpp  componentdescriptorregistry.cpp  entity.cpp  entityregistry.cpp  system.cpp  systemupdater.cpp  universe.cpp  world.cpp
Poplin/src/engine/ecs/components/: entitymetadatacomponent.cpp  logiccomponent.cpp  transformcomponent.cpp
Poplin/src/engine/ecs/systems/: logiccomponentupdatersystem.cpp
Poplin/src/engine/input/: input.cpp  inputhandler.cpp  inputhandler.h
Poplin/src/engine/window/: applicationwindow.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
Poplin/src/graphics/: renderer.cpp  shader.cpp  texture.cpp  vertexarray.cpp  vertexbuffer.cpp
Poplin/src/graphics/assets/: textureasset.cpp
Poplin/src/graphics/ecs/components/: cameracomponent.cpp  spritecomponent.cpp
Poplin/src/graphics/ecs/systems/: rendersystem.cpp
Poplin/src/graphics/loaders/: modelloader.cpp  shaderloader.cpp
Poplin/src/physics/: physicscontactlistener.cpp  physicsworld.cpp
Poplin/src/physics/ecs/components/: rigidbodycomponent.cpp
Poplin/src/physics/ecs/systems/: physicssystem.cpp
Sandbox/: CMakeLists.txt  debugtoolssystem.cpp  debugtoolssystem.h  playerbehaviorcomponent.h  sandboxecs.cpp  sandboxecs.h  sandboxreflectedtypes.cpp  sandboxreflectedtypes.h  scrollmessagecomponent.h  serializer.cpp  serializer.h
Weaver/: CMakeLists.txt  editorreflectedtypes.cpp  editorreflectedtypes.h  weaverecs.cpp  weaverecs.h
